WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84172
[Qt][WK2] Minibrowser asserts on startup at QtViewportInteractionEngine::ensureContentWithinViewportBoundary()
https://bugs.webkit.org/show_bug.cgi?id=84172
Summary
[Qt][WK2] Minibrowser asserts on startup at QtViewportInteractionEngine::ensu...
alan
Reported
2012-04-17 11:27:41 PDT
/home/zbujtas/WebKit/Source/WebKit2/UIProcess/qt/QtViewportInteractionEngine.cpp(400) : bool WebKit::QtViewportInteractionEngine::ensureContentWithinViewportBoundary(bool) 1 0x7f03fe447ae2 /home/zbujtas/WebKit/WebKitBuild/Debug/lib/libQtWebKit.so.5(_ZN6WebKit27QtViewportInteractionEngine35ensureContentWithinViewportBoundaryEb+0x4c) [0x7f03fe447ae2] 2 0x7f03fe353ec9 /home/zbujtas/WebKit/WebKitBuild/Debug/lib/libQtWebKit.so.5(_ZN29QQuickWebViewFlickablePrivate27didChangeViewportPropertiesERKN7WebCore18ViewportAttributesE+0x2bb) [0x7f03fe353ec9] 3 0x7f03fe440008 /home/zbujtas/WebKit/WebKitBuild/Debug/lib/libQtWebKit.so.5(_ZN12QtPageClient27didChangeViewportPropertiesERKN7WebCore18ViewportAttributesE+0x36) [0x7f03fe440008] 4 0x7f03fe3edf44 /home/zbujtas/WebKit/WebKitBuild/Debug/lib/libQtWebKit.so.5(_ZN6WebKit12WebPageProxy27didChangeViewportPropertiesERKN7WebCore18ViewportAttributesE+0x38) [0x7f03fe3edf44] 5 0x7f03fe575c80 /home/zbujtas/WebKit/WebKitBuild/Debug/lib/libQtWebKit.so.5(_ZN7CoreIPC18callMemberFunctionIN6WebKit12WebPageProxyEMS2_FvRKN7WebCore18ViewportAttributesEES4_EEvRKNS_10Arguments1IT1_EEPT_T0_+0x59) [0x7f03fe575c80] 6 0x7f03fe570e6c /home/zbujtas/WebKit/WebKitBuild/Debug/lib/libQtWebKit.so.5(_ZN7CoreIPC13handleMessageIN8Messages12WebPageProxy27DidChangeViewportPropertiesEN6WebKit12WebPageProxyEMS5_FvRKN7WebCore18ViewportAttributesEEEEvPNS_15ArgumentDecoderEPT0_T1_+0x59) [0x7f03fe570e6c] 7 0x7f03fe56e774 /home/zbujtas/WebKit/WebKitBuild/Debug/lib/libQtWebKit.so.5(_ZN6WebKit12WebPageProxy29didReceiveWebPageProxyMessageEPN7CoreIPC10ConnectionENS1_9MessageIDEPNS1_15ArgumentDecoderE+0x1a8) [0x7f03fe56e774] 8 0x7f03fe3e94b0 /home/zbujtas/WebKit/WebKitBuild/Debug/lib/libQtWebKit.so.5(_ZN6WebKit12WebPageProxy17didReceiveMessageEPN7CoreIPC10ConnectionENS1_9MessageIDEPNS1_15ArgumentDecoderE+0xea) [0x7f03fe3e94b0] 9 0x7f03fe420ec4 /home/zbujtas/WebKit/WebKitBuild/Debug/lib/libQtWebKit.so.5(_ZN6WebKit15WebProcessProxy17didReceiveMessageEPN7CoreIPC10ConnectionENS1_9MessageIDEPNS1_15ArgumentDecoderE+0x196) [0x7f03fe420ec4] 10 0x7f03fe3a4a88 /home/zbujtas/WebKit/WebKitBuild/Debug/lib/libQtWebKit.so.5(_ZN6WebKit25WebConnectionToWebProcess17didReceiveMessageEPN7CoreIPC10ConnectionENS1_9MessageIDEPNS1_15ArgumentDecoderE+0x12e) [0x7f03fe3a4a88] 11 0x7f03fe2d5ed7 /home/zbujtas/WebKit/WebKitBuild/Debug/lib/libQtWebKit.so.5(_ZN7CoreIPC10Connection15dispatchMessageERNS0_7MessageINS_15ArgumentDecoderEEE+0x14b) [0x7f03fe2d5ed7] 12 0x7f03fe2d60b1 /home/zbujtas/WebKit/WebKitBuild/Debug/lib/libQtWebKit.so.5(_ZN7CoreIPC10Connection16dispatchMessagesEv+0xaf) [0x7f03fe2d60b1] 13 0x7f03fe2dfec0 /home/zbujtas/WebKit/WebKitBuild/Debug/lib/libQtWebKit.so.5(_ZN3WTF15FunctionWrapperIMN7CoreIPC10ConnectionEFvvEEclEPS2_+0x58) [0x7f03fe2dfec0] 14 0x7f03fe2dfc7e /home/zbujtas/WebKit/WebKitBuild/Debug/lib/libQtWebKit.so.5(_ZN3WTF17BoundFunctionImplINS_15FunctionWrapperIMN7CoreIPC10ConnectionEFvvEEEFvPS3_EEclEv+0x32) [0x7f03fe2dfc7e] 15 0x7f03fe3d19aa /home/zbujtas/WebKit/WebKitBuild/Debug/lib/libQtWebKit.so.5(_ZNK3WTF8FunctionIFvvEEclEv+0x72) [0x7f03fe3d19aa] 16 0x7f03fee6e572 /home/zbujtas/WebKit/WebKitBuild/Debug/lib/libQtWebKit.so.5(_ZN7WebCore7RunLoop11performWorkEv+0x74) [0x7f03fee6e572] 17 0x7f03ff10d1a1 /home/zbujtas/WebKit/WebKitBuild/Debug/lib/libQtWebKit.so.5(_ZN7WebCore7RunLoop11TimerObject11performWorkEv+0x3b) [0x7f03ff10d1a1] 18 0x7f03ff10dccf /home/zbujtas/WebKit/WebKitBuild/Debug/lib/libQtWebKit.so.5(+0x29dfccf) [0x7f03ff10dccf] 19 0x7f03fbc21753 /home/zbujtas/qt5/qtbase/lib/libQtCore.so.5(_ZN14QMetaCallEvent13placeMetaCallEP7QObject+0xc3) [0x7f03fbc21753] 20 0x7f03fbc225cc /home/zbujtas/qt5/qtbase/lib/libQtCore.so.5(_ZN7QObject5eventEP6QEvent+0x124) [0x7f03fbc225cc] 21 0x7f03fbbedfd8 /home/zbujtas/qt5/qtbase/lib/libQtCore.so.5(_ZN23QCoreApplicationPrivate13notify_helperEP7QObjectP6QEvent+0x76) [0x7f03fbbedfd8] 22 0x7f03fbbedd18 /home/zbujtas/qt5/qtbase/lib/libQtCore.so.5(_ZN16QCoreApplication6notifyEP7QObjectP6QEvent+0xc2) [0x7f03fbbedd18] 23 0x7f03fbfceaaf /home/zbujtas/qt5/qtbase/lib/libQtGui.so.5(_ZN15QGuiApplication6notifyEP7QObjectP6QEvent+0xb3) [0x7f03fbfceaaf] 24 0x40afe6 ./bin/MiniBrowser() [0x40afe6] 25 0x7f03fbbedc24 /home/zbujtas/qt5/qtbase/lib/libQtCore.so.5(_ZN16QCoreApplication14notifyInternalEP7QObjectP6QEvent+0x9e) [0x7f03fbbedc24] 26 0x7f03fbbf18d9 /home/zbujtas/qt5/qtbase/lib/libQtCore.so.5(_ZN16QCoreApplication9sendEventEP7QObjectP6QEvent+0x51) [0x7f03fbbf18d9] 27 0x7f03fbbeecb8 /home/zbujtas/qt5/qtbase/lib/libQtCore.so.5(_ZN23QCoreApplicationPrivate16sendPostedEventsEP7QObjectiP11QThreadData+0x452) [0x7f03fbbeecb8] 28 0x7f03fbbee863 /home/zbujtas/qt5/qtbase/lib/libQtCore.so.5(_ZN16QCoreApplication16sendPostedEventsEP7QObjecti+0x2d) [0x7f03fbbee863] 29 0x7f03fbc56680 /home/zbujtas/qt5/qtbase/lib/libQtCore.so.5(+0x2af680) [0x7f03fbc56680] 30 0x7f03f84aca5d /lib/x86_64-linux-gnu/libglib-2.0.so.0(g_main_context_dispatch+0x1dd) [0x7f03f84aca5d] 31 0x7f03f84ad258 /lib/x86_64-linux-gnu/libglib-2.0.so.0(+0x45258) [0x7f03f84ad258] apparently, after the viewport computing refactor, QtViewportInteractionEngine::ensureContentWithinViewportBoundary() can be called with resumed engine. let's remove the ASSERT() for now to be able to startup the browser and re-think the validity of this ASSERT() when refactoring settles down.
Attachments
Patch
(1.83 KB, patch)
2012-04-17 12:01 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2012-04-17 12:01:57 PDT
Created
attachment 137573
[details]
Patch
Simon Hausmann
Comment 2
2012-04-18 02:57:18 PDT
Comment on
attachment 137573
[details]
Patch Seems reasonable to me and I can see the other callers respecting m_suspendCount.
Simon Hausmann
Comment 3
2012-04-18 02:57:36 PDT
***
Bug 84159
has been marked as a duplicate of this bug. ***
WebKit Review Bot
Comment 4
2012-04-18 03:04:40 PDT
Comment on
attachment 137573
[details]
Patch Clearing flags on attachment: 137573 Committed
r114496
: <
http://trac.webkit.org/changeset/114496
>
WebKit Review Bot
Comment 5
2012-04-18 03:04:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug